A bunch of paper edits that I'd been wanting to make for a while.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -454,3 +454,18 @@ journal = {Biometrika}
   year={1997},
   publisher={Elsevier}
 }
+
+@incollection{CDTipsAndTricks,
+year={2012},
+isbn={978-3-642-35288-1},
+booktitle={Neural Networks: Tricks of the Trade},
+volume={7700},
+series={Lecture Notes in Computer Science},
+editor={Montavon, Grégoire and Orr, Geneviève B. and Müller, Klaus-Robert},
+doi={10.1007/978-3-642-35289-8_32},
+title={A Practical Guide to Training Restricted Boltzmann Machines},
+url={http://dx.doi.org/10.1007/978-3-642-35289-8_32},
+publisher={Springer Berlin Heidelberg},
+author={Hinton, Geoffrey E.},
+pages={599-619}
+}
