--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -101,6 +101,19 @@ Artist A&Artist B\\
 
 \paragraph{Style capture} A powerful advantage of a data-driven approach is the ability to modify the underlying training source to achieve specialization of the resulting model. This ability allows our model to capture a specific style and color preferences such as ``high-contrast patterns'' simply by selecting a set of patterns with the desired property. Figure~\ref{fig:styleTraining} demonstrates this behavior using four style categories: \emph{Light}, \emph{Dark}, \emph{Bold}, and \emph{Mellow}. With only 17 training examples, our model can still capture general properties of the example patterns such as the distribution of colors over the background regions in \emph{Light} and \emph{Dark} and the amount of contrast between regions in \emph{Bold} and \emph{Mellow}. The model can also capture the style of a specific artist, as shown in Figure~\ref{fig:artistTraining}. Here, 100 images from each artist were used for training. The sampled images mimic certain properties of the the style of each artist, such as the light backgrounds preferred by artist A and the bold colors and dark backgrounds preferred by artist B. The complete list of patterns used as training data for these examples can be found in the supplemental materials.
 
+\begin{figure}[ht]
+\begin{tabular}{cccc} 
+\raisebox{0.5em}{\includegraphics[width=.275\columnwidth]{figs/photos/brick}}&
+\includegraphics[width=.65\columnwidth]{figs/photos/brickAll}\\
+\raisebox{0.5em}{\includegraphics[width=.275\columnwidth]{figs/photos/sunset}}&
+\includegraphics[width=.65\columnwidth]{figs/photos/sunsetAll}
+\end{tabular}
+
+\caption{Palettes are extracted from the two input photographs on the left, and on the right we show the top-scoring coloring suggested by our algorithm for three different pattern templates.\remark{Figure not yet referenced in text}}
+\vspace{-1.0em}
+\label{fig:photographMatching}
+\end{figure}
+
 \subsection{Applications}
 
 \paragraph{Web design}
