A little bit more framing/etc. to the performance section.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -165,4 +165,4 @@ Original&Recoloring 1&Recoloring 2&Recoloring 3\vspace{0.4em}\\
 
 The time required to generate coloring suggestions varies depending on the visual complexity of the pattern. Using the parallel tempering parameters described at the beginning of this section, the average sampling time was 73.0s to retrieve 20 MMR-diversified results for a single input pattern on a 2.67GHz Intel Core i7. Sampling is dominated by the probabilistic inference phase, which on average accounts for 83\% of the total running time.
 
-There are many avenues for improving the performance of our unoptimized prototype. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}. Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
+Enabling real-time coloring suggestions would benefit many of the applications demonstrated in this paper, and there are several avenues for improving the performance of our unoptimized, JVM-based prototype to this end. We could leverage the massive parallelism of graphics hardware to speed up parallel tempering, as was done in related work on automatic furniture layout~\cite{MerrellFurnitureLayout}. We could also improve the convergence of the individual MCMC chains via gradient-based proposals, as in Hamiltonian MCMC~\cite{HamiltonianMCMC}. Prior work has shown the feasibility of computing the gradients of programmatically-expressed distributions using automatic differentation~\cite{AutoDiff}. 
