Final word on weight tuning / bin selection (?)

--- a/latex/siggraph2013/appendix.tex
+++ b/latex/siggraph2013/appendix.tex
@@ -1,7 +1,7 @@
 \section*{Appendix}
 \label{sec:appendix}
 
-We provide more precise definitions for some of the color properties and features used in our model (Section ~\ref{sec:spatialCompat}).
+Here we provide a complete listing of features and precise definitions for some of the color properties used in our model (Section ~\ref{sec:spatialCompat}).
 
 \subsection*{Color Properties}
 
