--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -85,6 +85,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{dsfont}
+\usepackage{enumitem}
 
 %% For auto-inserting line breaks in extra long equations
 \usepackage{etoolbox}
