--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -330,14 +330,6 @@ language={English}
     pages = {498--519}
 }
 
-@misc{LogLinearModels,
-  author={Charles Elkan},
-  title={Log-linear models and conditional random fields},
-  year={2012},
-  howpublished = "\url{http://cseweb.ucsd.edu/users/elkan/250Bwinter2012/loglinearCRFs.pdf}",
-  note = {Retrieved January 5, 2013}
-}
-
 @article{ColorPaletteTools,
   title={Interactive color palette tools},
   author={Meier, B.J. and Spalter, A.M. and Karelitz, D.B.},
@@ -469,3 +461,24 @@ publisher={Springer Berlin Heidelberg},
 author={Hinton, Geoffrey E.},
 pages={599-619}
 }
+
+@article{IntrinsicImages,
+ author = {Bousseau, Adrien and Paris, Sylvain and Durand, Fr{\'e}do},
+ title = {User-assisted intrinsic images},
+ journal = {ACM Trans. Graph.},
+ issue_date = {December 2009},
+ volume = {28},
+ number = {5},
+ month = dec,
+ year = {2009},
+ issn = {0730-0301},
+ pages = {130:1--130:10},
+ articleno = {130},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1618452.1618476},
+ doi = {10.1145/1618452.1618476},
+ acmid = {1618476},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computational photography, intrinsic images, reflectance-illumination separation},
+} 
