Refreshed teaser results.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -76,13 +76,13 @@ Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and 
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-{\includegraphics[width=.16\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
-{\includegraphics[width=.16\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
+{\includegraphics[width=.17\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
+{\includegraphics[width=.17\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 %\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
-Suggestion&Results\\
+Original&Suggestions\\
 \end{tabular}
 
-\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the suggested images.}
+\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the input images.}
 \label{fig:nearbySuggestions}
 \vspace{-1.0em}
 \end{figure}
