Revisions pass based on feedback

--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -29,4 +29,4 @@ First, the results demonstrated in this paper use patterns from Colourlovers or 
 Second, this work explores colorizing patterns of the `color-by-numbers' format, in which some pattern regions are constrained to take the same color. What if this assumption were relaxed; that is, what if the color groups in the pattern template are unknown? A system that supported this more general type of pattern template could operate on an even larger set of inputs---essentially any image composed of segments. Implementing such a system would require a more sophisticated model, as well as transdimensional inference techniques to generate sample recolorings when the number of color groups is variable~\cite{ReversibleJumpMCMC}.
 
 % Future work: Embed in real creative software
-Finally, the prospect of embedding automatic coloring suggestion into real creative software presents an exciting opportunity. For example, a vector art program could continually generate suggestions in the background while its user works on a pattern; the user could choose to view the suggestions at any time, potentially picking one to use as an `autocompletion' of her work-in-progress. These kinds of tools have the potential to drastically shift the way that artists and enthusiasts work with color on a daily basis. 
+Finally, the prospect of embedding automatic coloring suggestions into real creative software presents an exciting opportunity. For example, a vector art program could continually generate suggestions in the background while its user works on a pattern; the user could choose to view the suggestions at any time, potentially picking one to use as an `autocompletion' of her work-in-progress. These kinds of tools have the potential to drastically shift the way that artists and enthusiasts work with color on a daily basis. 
