--- a/latex/siggraph2013/notation.tex
+++ b/latex/siggraph2013/notation.tex
@@ -29,10 +29,11 @@
 \newcommand{\groupInstStats}{\phi^{\textrm{Grp}}_\pi}
 \newcommand{\segInstStats}{\phi^{\textrm{Seg}}_\pi}
 \newcommand{\adjInstStats}{\phi^{\textrm{Adj}}_\pi}
-\newcommand{\groupTermWeight}{\mathbf{w}^{\textrm{Grp}}_\pi}
-\newcommand{\segTermWeight}{\mathbf{w}^{\textrm{Seg}}_\pi}
-\newcommand{\adjTermWeight}{\mathbf{w}^{\textrm{Adj}}_\pi}
-\newcommand{\colorCompatWeight}{\mathbf{w}^{\textrm{Compat}}}
+\newcommand{\groupTermWeight}{w^{\textrm{Grp}}_\pi}
+\newcommand{\segTermWeight}{w^{\textrm{Seg}}_\pi}
+\newcommand{\adjTermWeight}{w^{\textrm{Adj}}_\pi}
+\newcommand{\termWeight}{w_\term}
+\newcommand{\colorCompatWeight}{w^{\textrm{Compat}}}
 
 \newcommand{\colorCompatTerm}{\Phi^{\textrm{Compat}}}
 \newcommand{\factor}{\mathcal{F}}
