--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -86,6 +86,7 @@
 \usepackage{amsfonts}
 \usepackage{dsfont}
 \usepackage{enumitem}
+\usepackage{mathtools}
 
 %% For auto-inserting line breaks in extra long equations
 \usepackage{etoolbox}
