--- a/latex/siggraph2013/approach.tex
+++ b/latex/siggraph2013/approach.tex
@@ -4,14 +4,14 @@
 %\remark{D: Tom Funkhouser sold me on the value of this section, and one of the best examples from his papers is in http://www.cs.princeton.edu/~funk/pvg01.pdf. I actually like combining the Approach and Overview sections into one shorter section, though.}
 
 %Restate the goal/problem. Use Sharon's more descriptive definition of a pattern template.
-The goal of this paper is to develop a method for automatically generating pattern coloring suggestions to facilitate the creative coloring process. One challenge of such a system is that users may or may not have a target coloring style in mind. In addition, aesthetic taste varies across users and can depend on the situation. Thus, an effective color support system should both output a wide variety of appealing colorings, as well as provide controls to let the user personalize suggestions to their preferred coloring style.
+We aim to develop a method for automatically generating pattern coloring suggestions to facilitate the creative coloring process. One challenge of such a system is that users may or may not have a target coloring style in mind. In addition, aesthetic taste varies across users and can depend on the situation. Thus, an effective color support system should both output a wide variety of appealing colorings, as well as provide controls to let the user personalize suggestions to her preferred coloring style.
 
 %Although many people can easily judge whether a pattern coloring is appealing to them, creating an appealing coloring can take much more time and effort. The process often involves much trial-and-error as well as tweaking of colors, due to constraints between neighboring regions. Since the relationship between neighboring colors largely impacts color appearance, changing one color also often results in cascading changes to neighboring colors.
 
 %Start of notes on pattern template terminology/definition.
-Our approach takes as input a pattern template and any user-provided guidelines if available, and outputs suggested colorings for that pattern template. A pattern template specifies which regions in an image can be colored in, and which regions must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background regions must be the same color. In the rest of the paper, we refer to the set of regions that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus on 2D graphic design patterns. 
+Our approach takes as input a pattern template and any available user-provided guidelines, and outputs suggested colorings for that pattern template. A pattern template specifies which segments in an image can be colored in, and which segments must map to the same color. For example, an image of a flower on a background may have a template that specifies all petals of the flower must be the same color, and all background segments must be the same color. We refer to the set of segments that map to the same color as a \emph{color group}. Figure~\ref{fig:teaser} shows an example of a pattern template visualized in grayscale, where each lightness level identifies a different color group. This pattern template representation is relatively easy to author from images composed of segments, such as web designs, renderings of 3D scenes, and line drawings. In this paper, we focus on 2D graphic design patterns. 
 
-To generate attractive pattern colorings, a reasonable first step is to enforce that the colors used are `compatible' with one another, for some definition of color compatibility. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While high-scoring colorings do exhibit a great degree of diversity, scoring a coloring based soley on the compatibility of its colors is not enough as pattern appearance also relies on relative proportion and spatial arrangement of colors. The colorings in the figure exhibit several problems due to arrangement, such as foreground regions that blend into the background, and background regions that are too `loud' in color. Furthermore, color compatibility is a universal notion: it is not clear how to adapt it to match the style of a particular artist or the preferences of a particular user.
+To generate attractive pattern colorings, a reasonable first step is to enforce that the colors used are `compatible' with one another, for some definition of color compatibility. Figure~\ref{fig:ColorCompatOnly} shows several patterns whose colors receive a high score under the color compatibility model of O'Donovan et al.~\shortcite{ODonovan}. While high-scoring colorings do exhibit a great degree of diversity, scoring a coloring based soley on the compatibility of its colors insufficient as pattern appearance also relies on relative proportion and spatial arrangement of colors. The colorings in the figure exhibit several problems due to arrangement; foreground regions may blend into the background, and background regions may be too `loud' in color. Furthermore, color compatibility is a universal notion: it is not clear how to adapt it to match the style of a particular artist or the preferences of a particular user.
 
 %Large, background regions are colored differently than smaller, scattered `accent' regions; a thin, ribbon-like region against an empty field is colored differently than a thin region amidst a mass of similar regions.
 
