--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -76,18 +76,18 @@ Here, $\textrm{targetColor}(\group)$ is the desired color of group $\group$ and 
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
-{\includegraphics[width=.17\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
-{\includegraphics[width=.17\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.7\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
+{\includegraphics[width=.1785\columnwidth]{figs/guidedSearch1Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch1MMR}\vspace{0.5em}\\
+{\includegraphics[width=.1785\columnwidth]{figs/guidedSearch0Original}}&\includegraphics[width=.735\columnwidth]{figs/guidedSearch0MMR}\vspace{0.5em}\\
 %\raisebox{2em}{\includegraphics[width=.22\columnwidth]{figs/guidedSearch2Original}}%&\includegraphics[width=.7\columnwidth]{figs/guidedSearch2MMR}\\
 Original&Suggestions\\
 \end{tabular}
 
-\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing eight samples drawn from the new model for each of the input images.}
+\caption{An artist provides an initial color assignment and asks for patterns that are similar. We incorporate this request by adding an additional factor to our model, showing four samples drawn from the new model for each of the input images.}
 \label{fig:nearbySuggestions}
 \vspace{-1.0em}
 \end{figure}
 
-Figure~\ref{fig:nearbySuggestions} shows example scenarios where a proposed coloring is given, and the model returns similar colorings.
+Figure~\ref{fig:nearbySuggestions} shows example scenarios where a proposed coloring is given, and the model returns similar colorings. Our model is able to make significant variations to the input colors while still preserving desirable properties of the results.
 
 \begin{figure}[ht]
 \begin{tabular}{ccc} 
